unpackaged/main/default/objects/Coupon_Seller__c/Coupon_Seller__c.object-meta.xml
<CustomObject>
    <description>[EPH-6086] have coupon details in Hive</description>
    <label>Coupon (Seller)</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon (Seller)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>