unpackaged/main/default/objects/Coupon_Seller__c/fields/Ad_Spend_Date__c.field-meta.xml
<CustomField>
    <fullName>Ad_Spend_Date__c</fullName>
    <description>US-0015701 [AU] Coupon Seller Object - New fields for AU Budget Mgmt. and Contracts + Validation Rule</description>
    <inlineHelpText>Due Date for the amount that has to be spend for eBay Advertising. The value will be shown on the Coupon Contract.</inlineHelpText>
    <label>Ad Spend Date</label>
    <type>Date</type>
</CustomField>