unpackaged/main/default/objects/Coupon_Seller__c/fields/Additional_Terms__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms__c</fullName>
    <description>EPH-7501 Additional Terms field for Coupon Seller to populate in the contract email</description>
    <inlineHelpText>Additional Terms will be visible for sellers in the Coupon Contract. The value if this field is inherited from the parent Coupon record during the Coupon Seller record creation, but can modified if needed before sending the contract.</inlineHelpText>
    <label>Additional Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>