unpackaged/main/default/objects/Coupon_Seller__c/fields/Additional_Terms_Override_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_Override_of_Agreement__c</fullName>
    <description>US-0018713 [AU] Coupon Click Contract Templates to be sent to AU Sellers</description>
    <label>Additional Terms Override of Agreement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>