unpackaged/main/default/objects/Coupon_Seller__c/fields/Advertising_Amount__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Amount__c</fullName>
    <description>US-0015701 [AU] Coupon Seller Object - New fields for AU Budget Mgmt. and Contracts + Validation Rule</description>
    <inlineHelpText>Amount that the seller agreed to spend on eBay Advertising. The value will be shown on the Coupon Contract.</inlineHelpText>
    <label>Advertising Amount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>