unpackaged/main/default/objects/Coupon_Seller__c/fields/Advertising_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Promotion__c</fullName>
    <description>US-0015701 [AU] Coupon Seller Object - New fields for AU Budget Mgmt. and Contracts + Validation Rule</description>
    <inlineHelpText>Important: By setting this flag to &quot;Yes&quot; you will offer the seller an Advertising Promotion. The Passage will be shown on the Coupon Contract.</inlineHelpText>
    <label>Advertising Promotion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>