unpackaged/main/default/objects/Coupon_Seller__c/fields/Allow_reaccept_contract__c.field-meta.xml
<CustomField>
    <fullName>Allow_reaccept_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007038 Coupon - Allow seller to accept contract after contract due date</description>
    <inlineHelpText>Allows the seller to accept the contract after the due date</inlineHelpText>
    <label>Allow Accept Contract After Due Date</label>
    <type>Checkbox</type>
</CustomField>