unpackaged/main/default/objects/Coupon_Seller__c/fields/Breach_Reason__c.field-meta.xml
<CustomField>
    <fullName>Breach_Reason__c</fullName>
    <label>Breach Reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>