unpackaged/main/default/objects/Coupon_Seller__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>[EPH-6086] have coupon details in Hive</description>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>