unpackaged/main/default/objects/Coupon_Seller__c/fields/Co_funding__c.field-meta.xml
<CustomField>
    <fullName>Co_funding__c</fullName>
    <description>[EPH-6086] have coupon details in Hive</description>
    <label>Seller Co-funding %</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>