unpackaged/main/default/objects/Coupon_Seller__c/fields/Cofund_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Cofund_End_Date__c</fullName>
    <description>[EPH-6086] have coupon details in Hive</description>
    <label>Cofund End Date</label>
    <type>Date</type>
</CustomField>