unpackaged/main/default/objects/Coupon_Seller__c/fields/Cofund_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cofund_Start_Date__c</fullName>
    <description>[EPH-6086] have coupon details in Hive</description>
    <label>Cofund Start Date</label>
    <type>Date</type>
</CustomField>