unpackaged/main/default/objects/Coupon_Seller__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>US-0007260 POP COUPON - NEW RECORD TYPE COUPON SELLER OBJECT</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>