unpackaged/main/default/objects/Coupon_Seller__c/fields/Contra_LC_Non_Payout__c.field-meta.xml
<CustomField>
    <fullName>Contra_LC_Non_Payout__c</fullName>
    <label>Contra LC (Non-Payout)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>