unpackaged/main/default/objects/Coupon_Seller__c/fields/Contra_USD_Non_Payout__c.field-meta.xml
<CustomField>
    <fullName>Contra_USD_Non_Payout__c</fullName>
    <description>US-0018835 Correct Invoice fields on Coupon Seller</description>
    <label>Contra USD (Non-Payout)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>