unpackaged/main/default/objects/Coupon_Seller__c/fields/Contract_Accept_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Accept_Date__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <label>Contract Accept Date</label>
    <type>DateTime</type>
</CustomField>