unpackaged/main/default/objects/Coupon_Seller__c/fields/Contract_Accept_Date_Z__c.field-meta.xml
<CustomField>
    <fullName>Contract_Accept_Date_Z__c</fullName>
    <description>EPH-7406 Object Couopon Seller - Invoice fields FLS to Read Only</description>
    <formula>Contract_Accept_Date__c</formula>
    <label>Contract Accept Date</label>
    <type>DateTime</type>
</CustomField>