unpackaged/main/default/objects/Coupon_Seller__c/fields/Contract_Accepted_From__c.field-meta.xml
<CustomField>
    <fullName>Contract_Accepted_From__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <label>Contract Accepted From</label>
    <length>50</length>
    <type>Text</type>
</CustomField>