unpackaged/main/default/objects/Coupon_Seller__c/fields/Contract_Accepted_From_Z__c.field-meta.xml
<CustomField>
    <fullName>Contract_Accepted_From_Z__c</fullName>
    <description>EPH-7406 Object Couopon Seller - Invoice fields FLS to Read Only</description>
    <formula>Contract_Accepted_From__c</formula>
    <label>Contract Accepted From</label>
    <type>Text</type>
</CustomField>