unpackaged/main/default/objects/Coupon_Seller__c/fields/Contract_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Due_Date__c</fullName>
    <description>This is for FLOW Time Base using only. US-0011435</description>
    <label>Contract Due Date</label>
    <type>Date</type>
</CustomField>