unpackaged/main/default/objects/Coupon_Seller__c/fields/Contract_Language__c.field-meta.xml
<CustomField>
    <fullName>Contract_Language__c</fullName>
    <description>US-0018725 	Coupon Seller - Add condition to workflow for stage T4Statement and T40 Statement</description>
    <formula>TEXT(Coupon__r.Contract_Language__c)</formula>
    <label>Contract Language</label>
    <type>Text</type>
</CustomField>