unpackaged/main/default/objects/Coupon_Seller__c/fields/Contract_Signed_Declined_By__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Declined_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0010431 - Create Coupon details view on portal</description>
    <label>Contract Signed/Declined By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Coupon Sellers (Contract Signed/Declined By)</relationshipLabel>
    <relationshipName>Coupon_Sellers1</relationshipName>
    <type>Lookup</type>
</CustomField>