unpackaged/main/default/objects/Coupon_Seller__c/fields/Contract_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination_Date__c</fullName>
    <description>US-0007260 POP COUPON - NEW RECORD TYPE COUPON SELLER OBJECT</description>
    <label>Contract Termination Date</label>
    <type>DateTime</type>
</CustomField>