unpackaged/main/default/objects/Coupon_Seller__c/fields/Cost_Share_Seller__c.field-meta.xml
<CustomField>
    <fullName>Cost_Share_Seller__c</fullName>
    <description>US-0018835 Correct Invoice fields on Coupon Seller</description>
    <label>Cost Share Seller USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>