unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EPH-6086] have coupon details in Hive</description>
    <label>Coupon</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <errorMessage>if coupon is POP, then coupon seller must be pop</errorMessage>
        <filterItems>
            <field>Coupon__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pop Coupon</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pop Coupon Seller</value>
        </filterItems>
        <filterItems>
            <field>Coupon__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Pop Coupon</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Pop Coupon Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Coupon__c</referenceTo>
    <relationshipLabel>Coupon Sellers</relationshipLabel>
    <relationshipName>Coupon_Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>