unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <description>US-0010785 - Refactor Coupon Seller object to support standard search</description>
    <label>Coupon Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>