unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Contract_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Contract_Due_Date__c</fullName>
    <formula>Coupon__r.Contract_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Contract Due Date</label>
    <type>Date</type>
</CustomField>