unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount_Amount__c</fullName>
    <description>US-0010429 - Ability to sign Agreement in portal</description>
    <formula>Coupon__r.Coupon_Discount_Amount__c</formula>
    <label>Coupon Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>