unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount_Rate__c</fullName>
    <description>US-0015696 [AU] &quot;Coupon Promotion Preferences&quot; to be updated in Coupon Seller</description>
    <label>Coupon Discount Rate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>