unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Coupon_End_Time__c</fullName>
    <description>US-0007260 POP COUPON - NEW RECORD TYPE COUPON SELLER OBJECT</description>
    <formula>Coupon__r.Coupon_end_Time__c</formula>
    <label>Coupon End Time</label>
    <type>Time</type>
</CustomField>