unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Funding_Preference__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Funding_Preference__c</fullName>
    <description>US-0015696 [AU] &quot;Coupon Promotion Preferences&quot; to be updated in Coupon Seller</description>
    <label>Coupon Funding Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highest</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>