unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_ID__c.field-meta.xml
<CustomField>
    <fullName>Coupon_ID__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <formula>Coupon__r.Coupon_ID__c</formula>
    <inlineHelpText>This is the uniqueCouponcode</inlineHelpText>
    <label>Coupon Code</label>
    <type>Text</type>
</CustomField>