unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Promotion_Types__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Promotion_Types__c</fullName>
    <description>US-0015696 [AU] &quot;Coupon Promotion Preferences&quot; to be updated in Coupon Seller</description>
    <label>Coupon Promotion Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solus</fullName>
            </value>
            <value>
                <fullName>Co-Funded Site Wide</fullName>
            </value>
            <value>
                <fullName>Item Level</fullName>
            </value>
            <value>
                <fullName>Category Level</fullName>
            </value>
            <value>
                <fullName>Multi Seller</fullName>
            </value>
            <value>
                <fullName>Multi Solus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>