unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Promotions_Participation__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Promotions_Participation__c</fullName>
    <description>US-0015696 [AU] &quot;Coupon Promotion Preferences&quot; to be updated in Coupon Seller</description>
    <label>Coupon Promotions Participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>