unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Seller_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Seller_ID_2__c</fullName>
    <description>EPH-7967 Coupon Seller Object - Validation Rule: Block creation of duplicate sellers</description>
    <label>Coupon&amp;Seller_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>