unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Seller_ID__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Seller_ID__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <displayFormat>CS-{000000}</displayFormat>
    <inlineHelpText>Autogenerated coupon ID</inlineHelpText>
    <label>Coupon Seller ID</label>
    <type>AutoNumber</type>
</CustomField>