unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Seller_Owner_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Seller_Owner_FirstName__c</fullName>
    <description>US-0010667 - Notify Coupon Seller Owner when Items Uploaded by Seller</description>
    <formula>EBH_CouponSellerOwner__r.FirstName</formula>
    <label>Coupon Seller Owner FirstName</label>
    <type>Text</type>
</CustomField>