unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Seller_Stage__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Seller_Stage__c</fullName>
    <description>EPH-7157 Object: Coupon Seller
US-0012156</description>
    <label>Coupon Seller Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pitch Ready</fullName>
            </value>
            <value>
                <fullName>Targeted</fullName>
                <default>true</default>
                <label>Targeted</label>
            </value>
            <value>
                <fullName>Reached</fullName>
            </value>
            <value>
                <fullName>Commited</fullName>
            </value>
            <value>
                <fullName>Contract Negotiation</fullName>
                <label>Negotiation</label>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Sent for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Contract Send</fullName>
            </value>
            <value>
                <fullName>Contract Accepted</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Coupon Running</fullName>
            </value>
            <value>
                <fullName>Coupon executed</fullName>
            </value>
            <value>
                <fullName>T4 Statement Send</fullName>
            </value>
            <value>
                <fullName>T34 Statement Send</fullName>
                <label>T40 Statement Send</label>
            </value>
            <value>
                <fullName>Invoice paid</fullName>
            </value>
            <value>
                <fullName>Seller Declined</fullName>
            </value>
            <value>
                <fullName>Contract Appended</fullName>
            </value>
            <value>
                <fullName>Contract Terminated</fullName>
            </value>
            <value>
                <fullName>Invoice approved</fullName>
                <isActive>false</isActive>
                <label>Invoice approved</label>
            </value>
            <value>
                <fullName>Invoice pending</fullName>
                <isActive>false</isActive>
                <label>Invoice pending</label>
            </value>
            <value>
                <fullName>Invoice rejected</fullName>
                <isActive>false</isActive>
                <label>Invoice rejected</label>
            </value>
            <value>
                <fullName>Invoice send</fullName>
                <isActive>false</isActive>
                <label>Invoice send</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>