unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Source__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Source__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <formula>TEXT( Coupon__r.Coupon_Source__c )</formula>
    <label>Coupon Source</label>
    <type>Text</type>
</CustomField>