unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Start_Date__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <formula>Coupon__r.Coupon_Start_Date__c</formula>
    <label>Coupon Start Date</label>
    <type>Date</type>
</CustomField>