unpackaged/main/default/objects/Coupon_Seller__c/fields/Coupon_Type__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Type__c</fullName>
    <description>US-0012156</description>
    <label>Coupon Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Item Based</fullName>
            </value>
            <value>
                <fullName>Category Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>