unpackaged/main/default/objects/Coupon_Seller__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>EPH-8096
Coupon Seller - Add missing fields for BCD by creation</description>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>