unpackaged/main/default/objects/Coupon_Seller__c/fields/Date_34_days_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_34_days_Sent__c</fullName>
    <description>EPH-7565 Coupon - Manhattan Invoice Statment send to coupon seller</description>
    <label>Date 34 days Sent</label>
    <type>DateTime</type>
</CustomField>