unpackaged/main/default/objects/Coupon_Seller__c/fields/Day34AfterCouponEnd_Trigger_DE__c.field-meta.xml
<CustomField>
    <fullName>Day34AfterCouponEnd_Trigger_DE__c</fullName>
    <description>US-0018725 	Coupon Seller - Add condition to workflow for stage T4Statement and T40 Statement.
TimeBase populates this field, then trigger check and send email.</description>
    <label>Day34AfterCouponEnd_Trigger_DE</label>
    <type>DateTime</type>
</CustomField>