unpackaged/main/default/objects/Coupon_Seller__c/fields/Day_1_Alert__c.field-meta.xml
<CustomField>
    <fullName>Day_1_Alert__c</fullName>
    <label>Day 1 Alert</label>
    <type>Date</type>
</CustomField>