unpackaged/main/default/objects/Coupon_Seller__c/fields/days_since_coupon_End_Date__c.field-meta.xml
<CustomField>
    <fullName>days_since_coupon_End_Date__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <formula>IF(
  (today()- Coupon_End_Date__c) &lt; 0, NULL,
   today()- Coupon_End_Date__c
)</formula>
    <label>Days Since Coupon End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>