unpackaged/main/default/objects/Coupon_Seller__c/fields/Digest__c.field-meta.xml
<CustomField>
    <fullName>Digest__c</fullName>
    <description>US-0011631 - Create invocable method to encrypt SF record Ids or generate random unique value</description>
    <externalId>true</externalId>
    <label>Digest</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>