unpackaged/main/default/objects/Coupon_Seller__c/fields/eBay_Co_fund_Max__c.field-meta.xml
<CustomField>
    <fullName>eBay_Co_fund_Max__c</fullName>
    <description>US-0011410 - Set Co-fund eBay max spends for NA Coupon Sellers
US-0012217 - Modification for ebay co-fund max validation</description>
    <inlineHelpText>eBay&#39;s cap on co-fund</inlineHelpText>
    <label>eBay Co-fund Max</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>