unpackaged/main/default/objects/Coupon_Seller__c/fields/EBH_CouponSellerOwner__c.field-meta.xml
<CustomField>
    <fullName>EBH_CouponSellerOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(EPH-7591) Add new field Owner to Coupon Seller Object and Coupon Co-Invest Object</description>
    <label>Coupon Seller Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coupon_Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>