unpackaged/main/default/objects/Coupon_Seller__c/fields/Email_Adress__c.field-meta.xml
<CustomField>
    <fullName>Email_Adress__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <inlineHelpText>Email Adress provided by seller</inlineHelpText>
    <label>Email Adress</label>
    <type>Email</type>
</CustomField>