unpackaged/main/default/objects/Coupon_Seller__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>EPH-8096
Coupon Seller - Add missing fields for BCD by creation</description>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>