unpackaged/main/default/objects/Coupon_Seller__c/fields/Free_Subtitles__c.field-meta.xml
<CustomField>
    <fullName>Free_Subtitles__c</fullName>
    <description>EPH-7604 Coupon Contract Localization for UK, FR, IT &amp; ES</description>
    <inlineHelpText>Important: By setting this flag to &quot;Yes&quot; you will offer the seller a Free Substitle Promotion. The Passage will be shown on the Coupon Contract.</inlineHelpText>
    <label>Free Subtitles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>