unpackaged/main/default/objects/Coupon_Seller__c/fields/GMV__c.field-meta.xml
<CustomField>
    <fullName>GMV__c</fullName>
    <description>[#EPH-7796] New finacial fields for Coupon Seller &amp; Coupon Co-Invest Record record</description>
    <inlineHelpText>Coupon GMV in USD ($)</inlineHelpText>
    <label>GMV USD (Payout)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>