unpackaged/main/default/objects/Coupon_Seller__c/fields/GMV_LC__c.field-meta.xml
<CustomField>
    <fullName>GMV_LC__c</fullName>
    <description>[#EPH-7796] New finacial fields for Coupon Seller &amp; Coupon Co-Invest Record record</description>
    <inlineHelpText>Coupon GMV in Local Currency</inlineHelpText>
    <label>GMV LC (Payout)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>