unpackaged/main/default/objects/Coupon_Seller__c/fields/GMV_USD_Non_Payout__c.field-meta.xml
<CustomField>
    <fullName>GMV_USD_Non_Payout__c</fullName>
    <description>US-0018835 Correct Invoice fields on Coupon Seller</description>
    <label>GMV USD (Non-Payout)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>