unpackaged/main/default/objects/Coupon_Seller__c/fields/Invoice_Currency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Currency__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <label>Invoice Currency</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>