unpackaged/main/default/objects/Coupon_Seller__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>